--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -43,11 +43,12 @@ header {
 }
 
 h1 {
-    font-size: 6rem;
-    font-family: 'Odibee Sans', cursive;
-    letter-spacing: 0.4em;
-    text-indent: 0.3em;
-    display: inline-block;
+    font-size: 5rem;
+    font-family: 'Lexend Zetta', sans-serif;
+    letter-spacing: 0.1em;
+    text-indent: 0.2em;
+    /* display: inline-block; */
+    min-width: 32rem;
 }
 
 input[type=text] {
@@ -78,18 +79,22 @@ button:hover {
 }
 
 footer {
-    display: block;
     font-size: 1.2rem;
     font-style: italic;
-    text-align: center;
-    position: absolute;
-    margin: 0 auto;
-    padding-bottom: 1.0rem;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    margin-left: auto;
 }
   
+ul {
+
+}
+
+li {
+  list-style: none;
+}
+
+li:nth-child(even) {
+  background: #b0d1ff10;
+}
 
 .bg-light {
     background: var(--clr-primary-light);
@@ -130,7 +135,12 @@ footer {
     box-shadow: 5px 10px #00000040;
 }
 
-
+.cat-icon {
+    width: 1.9em;
+    object-fit: cover;
+    display: inline-block;
+    margin: 0 0.4em 0 0.2em;
+}
 
 .send-arrow {
     margin-left: 1.2em;
@@ -140,7 +150,6 @@ footer {
     border-width: 0.55em;
     border-radius: 1.5em;
 }
-
 
 .send-arrow:hover {
     transition: 0.5s;
@@ -156,7 +165,8 @@ footer {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    margin: 0 auto 1rem;
+    margin: 0 auto;
+    padding: 0 4rem;
     width: 109rem;
     max-width: 100%;
     min-height: 100%;
@@ -164,23 +174,27 @@ footer {
 
 .chat-container {
     border-radius: 1.5rem;
-    width: 93%;
+    width: 100%;
     min-height: 100%;
-    /* padding-bottom: 3rem; */
+    margin-bottom: 1rem;
+    padding: 0 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #messages-container {
     height: 59vh;
     min-height: 14rem;
-    width: 90%;
-    margin: 2.5rem auto 1.75rem;
+    width: 100%;
+    margin: 2rem auto;
     border-radius: 1.5em;
     padding: 1em;
 }
 
 #send-container {
     margin: 0 auto 2.5rem;
-    width: 90%;
+    width: 100%;
 }
 
 #send-form {
@@ -193,7 +207,6 @@ footer {
 
 #send-input {
     height: 100%;
-    /* flex-basis: 88%; */
     width: 100%;
 }
 
@@ -201,7 +214,6 @@ footer {
     height: 100%;
     font-size: 1.2rem;
     letter-spacing: 0.2em;
-    /* flex-basis: 12%; */
     min-width: 6rem;
     z-index: 1;
 }
