--- a/src/public/static/css/styles.css
+++ b/src/public/static/css/styles.css
@@ -1,17 +1,3 @@
-/* :root {
-    --clr-primary-light1: #9296F0;    
-    --clr-primary-light2: #5B63B7;
-    --clr-primary-light3: #CBCCFF;
-    --clr-primary-highlight: #000000;
-} */
-
-/* :root {
-    --clr-primary-light3: #E2B659;    
-    --clr-primary-light2: #B87C4C;
-    --clr-primary-light1: #7F4D3E;
-    --clr-primary-highlight: #000000;
-} */
-
 :root {
     --clr-primary-light2: #5A1619;    
     --clr-primary-light3: #D1E7E0;
@@ -23,12 +9,7 @@
     margin: 0;
     padding: 0;
     border: 0;
-    box-sizing: border-box;
-    font-weight: normal;
-    font-style: normal;
-    font-family: 'Roboto', sans-s;
-    outline: none;
-    font-size: 1.8rem;
+    box-sizing: border-box;    
 }
 
 
@@ -79,16 +60,23 @@ html {
     font-size: 62.5%
 }
 
+body {
+    line-height: 1.5;
+    font-weight: normal;
+    font-style: normal;
+    font-family: 'Roboto', sans-s;    
+    font-size: 1.8rem;
+}
+
 header {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
+    margin: 0.5rem 0 1rem;
     text-align: center;
 }
 
 h1 {
     font-size: 5rem;
     font-family: 'Anton', sans-serif;
-    /* letter-spacing: 0.1em; */
+    letter-spacing: 0.1em;
     text-indent: 0.2em;
     min-width: 32rem;
 }
@@ -96,7 +84,8 @@ h1 {
 input[type=text] {
     background: var(--clr-primary-light1);    
     padding: 1em 1em;
-    border-radius: 1.5em 0 0 1.5em;
+    border-radius: 2rem 0 0 2rem;
+    outline: none;
 }
 
 input[type=text]::placeholder {
@@ -119,8 +108,12 @@ button:focus, button:hover, button:active {
 button {
     display: inline-block;
     color: var(--clr-primary-light2);
-    border-radius: 0 1.5em 1.5em 0;
+    border-radius: 0 2em 2em 0;
     cursor: pointer;
+    outline: none;
+    font-size: 0.67em;
+    font-weight: bold;
+    letter-spacing: 0.2em;
 }
 
 button:hover {
@@ -130,7 +123,7 @@ button:hover {
 footer {
     font-size: 1.2rem;
     font-style: italic;
-    margin-left: auto;
+    text-align: center;
 }
   
 ul {
@@ -163,7 +156,6 @@ li:nth-child(even) {
     color: var(--clr-primary-light2);
 }
 
-
 .bg-light3 {
     background: var(--clr-primary-light3);
 }
@@ -185,65 +177,57 @@ li:nth-child(even) {
 }
 
 .cat-icon {
-    width: 1.9em;
+    width: 0.85em;
     object-fit: cover;
     display: inline-block;
-    margin: 0 0.0em 0.2em 0.1em;
     animation: spin 1.5s linear, fade-in 1.5s ease-in;
 }
 
-.send-arrow {
-    margin-left: 1.2em;
-    width: 0;
-    height: 0;
-    border: 0 solid #444444;
-    border-width: 0.55em;
-    border-radius: 1.5em;
-}
-
-.send-arrow:hover {
-    transition: 0.5s;
-    margin-left: 1.2em;
-    border: 0 solid transparent;
-    border-top-width: 0.55em;
-    border-bottom-width: 0.55em;
-    border-left: 1.45em solid #444444;
-}
-
 .main-content {
+    margin: 0 auto;
+    padding: 0 1rem;
+    min-height: 100%;
+}
+
+.container {
+    border-radius: 2rem;
+    min-height: 100%;
+    margin: 0 auto 1rem;
+    padding: 2rem;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
     align-items: center;
-    margin: 0 auto;
-    padding: 0 4rem;
-    width: 109rem;
-    max-width: 100%;
-    min-height: 100%;
 }
 
 .chat-container {
-    border-radius: 1.5rem;
-    width: 100%;
-    min-height: 100%;
-    margin-bottom: 1rem;
-    padding: 0 2rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    width: 109rem;
+    max-width: 100%;
+}
+
+.join-container {
+    width: 90rem;
+    max-width: 100%;
+    margin-top: 9rem;
+}
+
+.chat-text {
+    font-size: 1.8rem;
+}
+
+.system-message {
+    font-style: italic;
 }
 
 #messages-container {
     height: 59vh;
     min-height: 14rem;
     width: 100%;
-    margin: 2rem auto;
-    border-radius: 1.5em;
-    padding: 1em;
+    border-radius: 2rem;
+    padding: 1.5rem;
+    margin-bottom: 2rem;
 }
 
 #send-container {
-    margin: 0 auto 2.5rem;
     width: 100%;
 }
 
@@ -255,15 +239,22 @@ li:nth-child(even) {
     height: 4rem;
 }
 
-#send-input {
+#join-form {
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    height: 4rem;
+    width: 100%;
+}
+
+#text-input {
     height: 100%;
     width: 100%;
 }
 
 #send-button {
     height: 100%;
-    font-size: 1.2rem;
-    letter-spacing: 0.2em;
     min-width: 6rem;
     z-index: 1;
 }
