--- a/src/public/static/css/styles.css
+++ b/src/public/static/css/styles.css
@@ -1,8 +1,8 @@
 :root {
-    --clr-primary-light2: #5A1619;    
-    --clr-primary-light3: #D1E7E0;
-    --clr-primary-light1: #FFF4F2;
-    --clr-primary-highlight: #EE6463;
+    --clr-primary-light1: #D7CEC7;    
+    --clr-primary-light2: #565656;  
+    --clr-primary-light3: #C09F80;
+    --clr-primary-light4: #76323F;
 }
 
 * {
@@ -69,33 +69,29 @@ body {
 }
 
 header {
-    margin: 0.5rem 0 1rem;
-    text-align: center;
+    margin: 2.5rem 0 2rem;
+    text-align: center;    
 }
 
-h1 {
-    font-size: 5rem;
-    font-family: 'Anton', sans-serif;
-    letter-spacing: 0.1em;
-    text-indent: 0.2em;
-    min-width: 32rem;
+svg {
+    width: 100%;
+    height: 7.75rem;
 }
 
-input[type=text] {
-    background: var(--clr-primary-light1);    
+input[type=text] {    
     padding: 1em 1em;
     border-radius: 2rem 0 0 2rem;
     outline: none;
 }
 
 input[type=text]::placeholder {
-    color: var(--clr-primary-light2);
+    color: var(--clr-primary-light1);
     opacity: 0.5;
     font-style: italic;
 }
 
 input[type=text]::-webkit-input-placeholder {
-    color: var(--clr-primary-light2);
+    color: var(--clr-primary-light1);
     opacity: 0.5;
     font-style: italic;
 }
@@ -106,8 +102,7 @@ button:focus, button:hover, button:active {
 }
 
 button {
-    display: inline-block;
-    color: var(--clr-primary-light2);
+    display: inline-block;    
     border-radius: 0 2em 2em 0;
     cursor: pointer;
     outline: none;
@@ -146,6 +141,7 @@ li:nth-child(even) {
 
 .fg-light1 {
     color: var(--clr-primary-light1);
+    fill: var(--clr-primary-light1);
 }
 
 .bg-light2 {
@@ -154,6 +150,7 @@ li:nth-child(even) {
 
 .fg-light2 {
     color: var(--clr-primary-light2);
+    fill: var(--clr-primary-light2);
 }
 
 .bg-light3 {
@@ -162,14 +159,16 @@ li:nth-child(even) {
 
 .fg-light3 {
     color: var(--clr-primary-light3);
+    fill: var(--clr-primary-light3);
 }
 
-.bg-highlight {
-    background: var(--clr-primary-highlight);
+.bg-light4 {
+    background: var(--clr-primary-light4);
 }
 
-.fg-highlight {
-    color: var(--clr-primary-highlight);
+.fg-light4 {
+    color: var(--clr-primary-light4);
+    fill: var(--clr-primary-light4);
 }
 
 .shadow {
@@ -218,6 +217,11 @@ li:nth-child(even) {
     font-style: italic;
 }
 
+.full-height-width {
+    height: 100%;
+    width: 100%;
+}
+
 #messages-container {
     height: 59vh;
     min-height: 14rem;
@@ -245,11 +249,6 @@ li:nth-child(even) {
     align-items: center;
     justify-content: center;
     height: 4rem;
-    width: 100%;
-}
-
-#text-input {
-    height: 100%;
     width: 100%;
 }
 
