--- a/src/public/static/css/styles.css
+++ b/src/public/static/css/styles.css
@@ -75,7 +75,11 @@ header {
 
 svg {
     width: 100%;
-    height: 7.75rem;
+}
+
+svg.def-only {
+    height: 0;
+    width: 0;
 }
 
 input[type=text] {    
@@ -220,6 +224,10 @@ li:nth-child(even) {
 .full-height-width {
     height: 100%;
     width: 100%;
+}
+
+.title-height {
+    height: 7rem;
 }
 
 #messages-container {
