--- a/src/views/login-content.ejs
+++ b/src/views/login-content.ejs
@@ -1,24 +1,22 @@
-<div class="base-container container-med-w bg-light3 border-rnd-full" ">
-    <form method=" POST " class="flex-col-container gap-med ">
-    <div class="seperator label ">
-        <hr>
-        <div>account login</div>
-        <hr>
-    </div>
-    <div class="flex-resp-container gap-thin full-w ">
-        <input class="border-resp-left full-w bg-light2 center " name="email " type="text " autocomplete="off "
-            placeholder="email " />
-        <input class="border-resp-right full-w bg-light2 center " name="password " type="password " autocomplete="off "
-            placeholder="password " />
-    </div>
-    <div class="flex-col-container gap-thin full-w ">
-        <button class="border-rnd-full full-w bg-light4 fg-light1 ">LOGIN</button>
-        <div class="seperator ">
+<div class="base-container container-med-w bg-clr3 border-rnd-full">
+    <form method="POST" class="flex-col-container gap-med">
+        <div class="seperator label">
             <hr>
-            <div>or</div>
+            <div>account login</div>
             <hr>
         </div>
-        <button class="border-rnd-full full-w bg-light4 fg-light1 ">REGISTER</button>
-    </div>
+        <div class="flex-resp-container gap-thin full-w">
+            <input class="border-resp-left full-w bg-clr2 center" name="email" type="text" autocomplete="off" placeholder="email" />
+            <input class="border-resp-right full-w bg-clr2 center" name="password" type="password" autocomplete="off" placeholder="password" />
+        </div>
+        <div class="flex-col-container gap-thin full-w">
+            <button class="border-rnd-full full-w bg-clr4 fg-clr1">LOGIN</button>
+            <div class="seperator">
+                <hr>
+                <div>or</div>
+                <hr>
+            </div>
+            <button class="border-rnd-full full-w bg-clr4 fg-clr1">REGISTER</button>
+        </div>
     </form>
 </div>
