--- a/src/public/static/css/styles.css
+++ b/src/public/static/css/styles.css
@@ -1,8 +1,8 @@
 :root {
-    --clr-primary-light1: #D7CEC7;
-    --clr-primary-light2: #565656;
-    --clr-primary-light3: #C09F80;
-    --clr-primary-light4: #76323F;
+    --clr-primary1: #D7CEC7;
+    --clr-primary2: #565656;
+    --clr-primary3: #C09F80;
+    --clr-primary4: #76323F;
 }
 
 * {
@@ -17,7 +17,7 @@
         filter: brightness(100%);
     }
     25% {
-        filter: brightness(80%);
+        filter: brightness(75%);
     }
     100% {
         filter: brightness(100%);
@@ -34,7 +34,7 @@ body {
     font-weight: normal;
     font-style: normal;
     font-family: 'Roboto', sans-s;
-    font-size: 1.8rem;
+    font-size: 1.7rem;
     height: 100%;
 }
 
@@ -55,10 +55,9 @@ svg.def-only {
 
 input {
     outline: none;
-    height: 4rem;
     font-size: 1.8rem;
     padding: 1em;
-    color: var(--clr-primary-light1);
+    color: var(--clr-primary1);
 }
 
 
@@ -70,34 +69,48 @@ input::-webkit-inner-spin-button {
     margin: 0;
 }
 
-
-/* Firefox */
-
-input[type=number] {
-    -moz-appearance: textfield;
-}
-
-
-/* Firefox */
-
-input[type=number] {
-    -moz-appearance: textfield;
-}
-
 input::placeholder {
-    color: var(--clr-primary-light1);
-    opacity: 0.5;
+    color: var(--clr-primary1);
+    opacity: 0.3;
     font-style: italic;
     text-align: center;
 }
 
+input[type="radio"] {
+    display: none;
+}
+
+input[type="radio"]+label {
+    background-color: var(--clr-primary2);
+    color: var(--clr-primary1);
+    width: 100%;
+    text-align: center;
+    cursor: pointer;
+}
+
+input[type="radio"]:checked+label {
+    background-color: var(--clr-primary1);
+    color: var(--clr-primary2)
+}
+
+label {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+label:hover,
 input:focus,
 input:hover,
 input:active,
 button:focus,
 button:hover,
 button:active {
-    animation: flash .5s linear;
+    animation: flash 0.5s linear;
+}
+
+label {
+    transition: all 0.5s;
 }
 
 button {
@@ -110,10 +123,6 @@ button {
     height: 4rem;
     min-width: 6rem;
     z-index: 1;
-}
-
-button:hover {
-    animation: flash .5s linear;
 }
 
 footer {
@@ -137,44 +146,44 @@ li:nth-child(even) {
     background: #00000010;
 }
 
-.bg-light1 {
-    background: var(--clr-primary-light1);
+.bg-clr1 {
+    background: var(--clr-primary1);
 }
 
-.fg-light1 {
-    color: var(--clr-primary-light1);
-    fill: var(--clr-primary-light1);
+.fg-clr1 {
+    color: var(--clr-primary1);
+    fill: var(--clr-primary1);
 }
 
-.bg-light2 {
-    background: var(--clr-primary-light2);
+.bg-clr2 {
+    background: var(--clr-primary2);
 }
 
-.fg-light2 {
-    color: var(--clr-primary-light2);
-    fill: var(--clr-primary-light2);
+.fg-clr2 {
+    color: var(--clr-primary2);
+    fill: var(--clr-primary2);
 }
 
-.bg-light3 {
-    background: var(--clr-primary-light3);
+.bg-clr3 {
+    background: var(--clr-primary3);
 }
 
-.fg-light3 {
-    color: var(--clr-primary-light3);
-    fill: var(--clr-primary-light3);
+.fg-clr3 {
+    color: var(--clr-primary3);
+    fill: var(--clr-primary3);
 }
 
-.bg-light4 {
-    background: var(--clr-primary-light4);
+.bg-clr4 {
+    background: var(--clr-primary4);
 }
 
-.fg-light4 {
-    color: var(--clr-primary-light4);
-    fill: var(--clr-primary-light4);
+.fg-clr4 {
+    color: var(--clr-primary4);
+    fill: var(--clr-primary4);
 }
 
 .shadow {
-    box-shadow: 5px 10px #00000040;
+    box-shadow: 8px 8px 5px #00000070;
 }
 
 .border-rnd-full {
@@ -235,6 +244,7 @@ li:nth-child(even) {
     max-width: 100%;
     flex: 1 1 auto;
     overflow-y: auto;
+    padding: 0 3rem;
 }
 
 .base-container {
@@ -288,44 +298,47 @@ li:nth-child(even) {
     align-items: center;
     justify-content: center;
     width: 100%;
-    margin: 2rem 0;
-}
-
-.seperator.label {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    margin: 2rem 0 0;
 }
 
 .seperator>hr {
     width: 100%;
     height: 1.2px;
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), var(--clr-primary-light4), rgba(0, 0, 0, 0));
-}
-
-.seperator.label>hr {
-    width: 100%;
-    height: 1.2px;
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), var(--clr-primary-light2), rgba(0, 0, 0, 0));
-    opacity: 0.75;
 }
 
 .seperator>div {
     font-size: 1.5rem;
     font-style: italic;
-    color: var(--clr-primary-light4);
+    color: var(--clr-primary4);
     white-space: nowrap;
 }
 
-.seperator.label>div {
-    font-size: 1.5rem;
-    font-style: italic;
-    color: var(--clr-primary-light2);
-    white-space: nowrap;
+.red>hr {
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), var(--clr-primary4), rgba(0, 0, 0, 0));
+}
+
+.grey>hr {
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), var(--clr-primary2), rgba(0, 0, 0, 0));
     opacity: 0.75;
+}
+
+.red>div {
+    color: var(--clr-primary4);
+}
+
+.grey>div {
+    color: var(--clr-primary2);
+}
+
+.bottom-spacer {
+    margin-bottom: 2rem;
+}
+
+.top-spacer {
+    margin-top: 2rem;
+}
+
+.input-height {
+    height: 3.5rem;
 }
 
 .center {
