nightly; focusout validation

--- a/src/public/static/css/styles.css
+++ b/src/public/static/css/styles.css
@@ -3,6 +3,11 @@
     --clr-primary2: #565656;
     --clr-primary3: #C09F80;
     --clr-primary4: #76323F;
+    --clr-error: #884A32;
+    --clr-pass: #81AF96;
+    --gap-thin: 0.25rem;
+    --gap-thick: 3rem;
+    --gap-medium: 1rem;
 }
 
 * {
@@ -30,7 +35,7 @@ html {
 }
 
 body {
-    line-height: 1.5;
+    line-height: 1.4;
     font-weight: normal;
     font-style: normal;
     font-family: 'Roboto', sans-s;
@@ -55,9 +60,26 @@ svg.def-only {
 
 input {
     outline: none;
-    font-size: 1.8rem;
+    font-size: 1.7rem;
     padding: 1em;
     color: var(--clr-primary1);
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+    /* border: 1px solid cyan; */
+    /* font-size: 2.5rem !important; */
+    -webkit-text-fill-color: var(--clr-primary1);
+    /* -webkit-box-shadow: 0 0 0px 1000px #000 inset; */
+    transition: background-color 5000s ease-in-out 0s;
 }
 
 
@@ -146,6 +168,14 @@ li:nth-child(even) {
     background: #00000010;
 }
 
+.blue {
+    background-color: blue;
+}
+
+.green {
+    background-color: green;
+}
+
 .bg-clr1 {
     background: var(--clr-primary1);
 }
@@ -211,7 +241,7 @@ li:nth-child(even) {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0 0.5rem;
+    /* padding: 0 0.5rem; */
 }
 
 .flex-row-container {
@@ -229,21 +259,26 @@ li:nth-child(even) {
 }
 
 .gap-thin {
-    gap: 0.25rem;
+    gap: var(--gap-thin);
 }
 
 .gap-med {
-    gap: 1rem;
+    gap: var(--gap-medium);
+    ;
 }
 
 .gap-thick {
-    gap: 2rem;
+    gap: var(--gap-thick);
+}
+
+.gap-resp {
+    gap: var(--gap-thin);
 }
 
 .main-content {
     max-width: 100%;
     flex: 1 1 auto;
-    overflow-y: auto;
+    /* overflow-y: auto; */
     padding: 0 3rem;
 }
 
@@ -298,6 +333,7 @@ li:nth-child(even) {
     align-items: center;
     justify-content: center;
     width: 100%;
+    margin: 1rem 0;
 }
 
 .seperator>hr {
@@ -330,7 +366,7 @@ li:nth-child(even) {
 }
 
 .bottom-spacer {
-    margin-bottom: 2rem;
+    margin-bottom: 3rem;
 }
 
 .top-spacer {
@@ -338,7 +374,24 @@ li:nth-child(even) {
 }
 
 .input-height {
-    height: 3.5rem;
+    height: 3.4rem;
+}
+
+div.validation-error {
+    height: 2rem;
+    font-size: 1.5rem;
+    font-style: italic;
+    color: var(--clr-error);
+    text-align: center;
+    padding-top: 0.3rem;
+}
+
+input.validation-error {
+    box-shadow: inset 0 0 0 2px var(--clr-error);
+}
+
+input.validation-pass {
+    box-shadow: inset 0 0 0 2px var(--clr-pass);
 }
 
 .center {
@@ -356,5 +409,8 @@ li:nth-child(even) {
     .border-resp-left,
     .border-resp-middle {
         border-radius: 2rem;
+    }
+    .gap-resp {
+        gap: var(--gap-thick);
     }
 }
