--- a/src/views/login-content.ejs
+++ b/src/views/login-content.ejs
@@ -6,8 +6,8 @@
             <hr>
         </div>
         <div class="flex-resp-container gap-thin full-w">
-            <input class="border-resp-left full-w bg-clr2 center" name="email" type="text" autocomplete="off" placeholder="email" />
-            <input class="border-resp-right full-w bg-clr2 center" name="password" type="password" autocomplete="off" placeholder="password" />
+            <input class="input-height border-resp-left full-w bg-clr2 center" name="email" type="text" autocomplete="off" placeholder="email" />
+            <input class="input-height border-resp-right full-w bg-clr2 center" name="password" type="password" autocomplete="off" placeholder="password" />
         </div>
         <div class="flex-col-container gap-thin full-w">
             <button class="border-rnd-full full-w bg-clr4 fg-clr1">LOGIN</button>
