--- a/src/views/main-template.ejs
+++ b/src/views/main-template.ejs
@@ -20,6 +20,7 @@
     <!-- <script src="/socket.io/socket.io.js"></script>
     <script type="module" src="/js/main.js" defer></script> -->
     <script src="/js/date.js" defer></script>
+    <script src="/js/reg.js" type="module" defer></script>
 
     <title>CatBox</title>
 </head>
